--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "walletlink": "^2.1.6",
     "web3modal": "^1.9.3"
   },
   "devDependencies": {
